--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="rpe.css">
   </head>
@@ -14,284 +15,288 @@
     <br>
 
     <p>セット重量を計算</p>
-    <table>
-      <tr>
-        <td colspan="2">reps</td>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-      </tr>
-      <tr>
-        <td rowspan="8">rpe</td>
-        <td>10</td>
-        <td id="1_1">100%</td>
-        <td id="1_2">95.5%</td>
-        <td id="1_3">92.2%</td>
-        <td id="1_4">89.2%</td>
-        <td id="1_5">86.3%</td>
-        <td id="1_6">83.7%</td>
-        <td id="1_7">81.1%</td>
-        <td id="1_8">78.6%</td>
-        <td id="1_9">76.2%</td>
-        <td id="1_10">73.9%</td>
-        <td id="1_11">70.7%</td>
-        <td id="1_12">68.0%</td>
-      </tr>
-      <tr>
-        <td>9.5</td>
-        <td id="2_1">97.8%</td>
-        <td id="2_2">93.9%</td>
-        <td id="2_3">90.7%</td>
-        <td id="2_4">87.8%</td>
-        <td id="2_5">85.0%</td>
-        <td id="2_6">82.4%</td>
-        <td id="2_7">79.9%</td>
-        <td id="2_8">77.4%</td>
-        <td id="2_9">75.1%</td>
-        <td id="2_10">72.3%</td>
-        <td id="2_11">69.4%</td>
-        <td id="2_12">66.7%</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td id="3_1">95.5%</td>
-        <td id="3_2">92.2%</td>
-        <td id="3_3">89.2%</td>
-        <td id="3_4">86.3%</td>
-        <td id="3_5">83.7%</td>
-        <td id="3_6">81.1%</td>
-        <td id="3_7">78.6%</td>
-        <td id="3_8">76.2%</td>
-        <td id="3_9">73.9%</td>
-        <td id="3_10">70.7%</td>
-        <td id="3_11">68.0%</td>
-        <td id="3_12">65.3%</td>
-      </tr>
-      <tr>
-        <td>8.5</td>
-        <td id="4_1">93.9%</td>
-        <td id="4_2">90.7%</td>
-        <td id="4_3">87.8%</td>
-        <td id="4_4">85.0%</td>
-        <td id="4_5">82.4%</td>
-        <td id="4_6">79.9%</td>
-        <td id="4_7">77.4%</td>
-        <td id="4_8">75.1%</td>
-        <td id="4_9">72.3%</td>
-        <td id="4_10">69.4%</td>
-        <td id="4_11">66.7%</td>
-        <td id="4_12">64.0%</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td id="5_1">92.2%</td>
-        <td id="5_2">89.2%</td>
-        <td id="5_3">86.3%</td>
-        <td id="5_4">83.7%</td>
-        <td id="5_5">81.1%</td>
-        <td id="5_6">78.6%</td>
-        <td id="5_7">76.2%</td>
-        <td id="5_8">73.9%</td>
-        <td id="5_9">70.7%</td>
-        <td id="5_10">68.0%</td>
-        <td id="5_11">65.3%</td>
-        <td id="5_12">62.6%</td>
-      </tr>
-      <tr>
-        <td>7.5</td>
-        <td id="6_1">90.7%</td>
-        <td id="6_2">87.8%</td>
-        <td id="6_3">85.0%</td>
-        <td id="6_4">82.4%</td>
-        <td id="6_5">79.9%</td>
-        <td id="6_6">77.4%</td>
-        <td id="6_7">75.1%</td>
-        <td id="6_8">72.3%</td>
-        <td id="6_9">69.4%</td>
-        <td id="6_10">66.7%</td>
-        <td id="6_11">64.0%</td>
-        <td id="6_12">61.3%</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td id="7_1">89.2%</td>
-        <td id="7_2">86.3%</td>
-        <td id="7_3">83.7%</td>
-        <td id="7_4">81.1%</td>
-        <td id="7_5">78.6%</td>
-        <td id="7_6">76.2%</td>
-        <td id="7_7">73.9%</td>
-        <td id="7_8">70.7%</td>
-        <td id="7_9">68.0%</td>
-        <td id="7_10">65.3%</td>
-        <td id="7_11">62.6%</td>
-        <td id="7_12">59.9%</td>
-      </tr>
-      <tr>
-        <td>6.5</td>
-        <td id="8_1">87.8%</td>
-        <td id="8_2">85.0%</td>
-        <td id="8_3">82.4%</td>
-        <td id="8_4">79.9%</td>
-        <td id="8_5">77.4%</td>
-        <td id="8_6">75.1%</td>
-        <td id="8_7">72.3%</td>
-        <td id="8_8">69.4%</td>
-        <td id="8_9">66.7%</td>
-        <td id="8_10">64.0%</td>
-        <td id="8_11">61.3%</td>
-        <td id="8_12">58.6%</td>
-      </tr>
-    </table>
+    <div class="table-scroll">
+      <table>
+        <tr>
+          <td colspan="2">reps</td>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+          <td>5</td>
+          <td>6</td>
+          <td>7</td>
+          <td>8</td>
+          <td>9</td>
+          <td>10</td>
+          <td>11</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td rowspan="8">rpe</td>
+          <td>10</td>
+          <td id="1_1">100%</td>
+          <td id="1_2">95.5%</td>
+          <td id="1_3">92.2%</td>
+          <td id="1_4">89.2%</td>
+          <td id="1_5">86.3%</td>
+          <td id="1_6">83.7%</td>
+          <td id="1_7">81.1%</td>
+          <td id="1_8">78.6%</td>
+          <td id="1_9">76.2%</td>
+          <td id="1_10">73.9%</td>
+          <td id="1_11">70.7%</td>
+          <td id="1_12">68.0%</td>
+        </tr>
+        <tr>
+          <td>9.5</td>
+          <td id="2_1">97.8%</td>
+          <td id="2_2">93.9%</td>
+          <td id="2_3">90.7%</td>
+          <td id="2_4">87.8%</td>
+          <td id="2_5">85.0%</td>
+          <td id="2_6">82.4%</td>
+          <td id="2_7">79.9%</td>
+          <td id="2_8">77.4%</td>
+          <td id="2_9">75.1%</td>
+          <td id="2_10">72.3%</td>
+          <td id="2_11">69.4%</td>
+          <td id="2_12">66.7%</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td id="3_1">95.5%</td>
+          <td id="3_2">92.2%</td>
+          <td id="3_3">89.2%</td>
+          <td id="3_4">86.3%</td>
+          <td id="3_5">83.7%</td>
+          <td id="3_6">81.1%</td>
+          <td id="3_7">78.6%</td>
+          <td id="3_8">76.2%</td>
+          <td id="3_9">73.9%</td>
+          <td id="3_10">70.7%</td>
+          <td id="3_11">68.0%</td>
+          <td id="3_12">65.3%</td>
+        </tr>
+        <tr>
+          <td>8.5</td>
+          <td id="4_1">93.9%</td>
+          <td id="4_2">90.7%</td>
+          <td id="4_3">87.8%</td>
+          <td id="4_4">85.0%</td>
+          <td id="4_5">82.4%</td>
+          <td id="4_6">79.9%</td>
+          <td id="4_7">77.4%</td>
+          <td id="4_8">75.1%</td>
+          <td id="4_9">72.3%</td>
+          <td id="4_10">69.4%</td>
+          <td id="4_11">66.7%</td>
+          <td id="4_12">64.0%</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td id="5_1">92.2%</td>
+          <td id="5_2">89.2%</td>
+          <td id="5_3">86.3%</td>
+          <td id="5_4">83.7%</td>
+          <td id="5_5">81.1%</td>
+          <td id="5_6">78.6%</td>
+          <td id="5_7">76.2%</td>
+          <td id="5_8">73.9%</td>
+          <td id="5_9">70.7%</td>
+          <td id="5_10">68.0%</td>
+          <td id="5_11">65.3%</td>
+          <td id="5_12">62.6%</td>
+        </tr>
+        <tr>
+          <td>7.5</td>
+          <td id="6_1">90.7%</td>
+          <td id="6_2">87.8%</td>
+          <td id="6_3">85.0%</td>
+          <td id="6_4">82.4%</td>
+          <td id="6_5">79.9%</td>
+          <td id="6_6">77.4%</td>
+          <td id="6_7">75.1%</td>
+          <td id="6_8">72.3%</td>
+          <td id="6_9">69.4%</td>
+          <td id="6_10">66.7%</td>
+          <td id="6_11">64.0%</td>
+          <td id="6_12">61.3%</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td id="7_1">89.2%</td>
+          <td id="7_2">86.3%</td>
+          <td id="7_3">83.7%</td>
+          <td id="7_4">81.1%</td>
+          <td id="7_5">78.6%</td>
+          <td id="7_6">76.2%</td>
+          <td id="7_7">73.9%</td>
+          <td id="7_8">70.7%</td>
+          <td id="7_9">68.0%</td>
+          <td id="7_10">65.3%</td>
+          <td id="7_11">62.6%</td>
+          <td id="7_12">59.9%</td>
+        </tr>
+        <tr>
+          <td>6.5</td>
+          <td id="8_1">87.8%</td>
+          <td id="8_2">85.0%</td>
+          <td id="8_3">82.4%</td>
+          <td id="8_4">79.9%</td>
+          <td id="8_5">77.4%</td>
+          <td id="8_6">75.1%</td>
+          <td id="8_7">72.3%</td>
+          <td id="8_8">69.4%</td>
+          <td id="8_9">66.7%</td>
+          <td id="8_10">64.0%</td>
+          <td id="8_11">61.3%</td>
+          <td id="8_12">58.6%</td>
+        </tr>
+      </table>
+    </div>
 
     <p>e1RMを計算</p>
-    <table>
-      <tr>
-        <td colspan="2">reps</td>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-      </tr>
-      <tr>
-        <td rowspan="8">rpe</td>
-        <td>10</td>
-        <td id="r1_1">100%</td>
-        <td id="r1_2">95.5%</td>
-        <td id="r1_3">92.2%</td>
-        <td id="r1_4">89.2%</td>
-        <td id="r1_5">86.3%</td>
-        <td id="r1_6">83.7%</td>
-        <td id="r1_7">81.1%</td>
-        <td id="r1_8">78.6%</td>
-        <td id="r1_9">76.2%</td>
-        <td id="r1_10">73.9%</td>
-        <td id="r1_11">70.7%</td>
-        <td id="r1_12">68.0%</td>
-      </tr>
-      <tr>
-        <td>9.5</td>
-        <td id="r2_1">97.8%</td>
-        <td id="r2_2">93.9%</td>
-        <td id="r2_3">90.7%</td>
-        <td id="r2_4">87.8%</td>
-        <td id="r2_5">85.0%</td>
-        <td id="r2_6">82.4%</td>
-        <td id="r2_7">79.9%</td>
-        <td id="r2_8">77.4%</td>
-        <td id="r2_9">75.1%</td>
-        <td id="r2_10">72.3%</td>
-        <td id="r2_11">69.4%</td>
-        <td id="r2_12">66.7%</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td id="r3_1">95.5%</td>
-        <td id="r3_2">92.2%</td>
-        <td id="r3_3">89.2%</td>
-        <td id="r3_4">86.3%</td>
-        <td id="r3_5">83.7%</td>
-        <td id="r3_6">81.1%</td>
-        <td id="r3_7">78.6%</td>
-        <td id="r3_8">76.2%</td>
-        <td id="r3_9">73.9%</td>
-        <td id="r3_10">70.7%</td>
-        <td id="r3_11">68.0%</td>
-        <td id="r3_12">65.3%</td>
-      </tr>
-      <tr>
-        <td>8.5</td>
-        <td id="r4_1">93.9%</td>
-        <td id="r4_2">90.7%</td>
-        <td id="r4_3">87.8%</td>
-        <td id="r4_4">85.0%</td>
-        <td id="r4_5">82.4%</td>
-        <td id="r4_6">79.9%</td>
-        <td id="r4_7">77.4%</td>
-        <td id="r4_8">75.1%</td>
-        <td id="r4_9">72.3%</td>
-        <td id="r4_10">69.4%</td>
-        <td id="r4_11">66.7%</td>
-        <td id="r4_12">64.0%</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td id="r5_1">92.2%</td>
-        <td id="r5_2">89.2%</td>
-        <td id="r5_3">86.3%</td>
-        <td id="r5_4">83.7%</td>
-        <td id="r5_5">81.1%</td>
-        <td id="r5_6">78.6%</td>
-        <td id="r5_7">76.2%</td>
-        <td id="r5_8">73.9%</td>
-        <td id="r5_9">70.7%</td>
-        <td id="r5_10">68.0%</td>
-        <td id="r5_11">65.3%</td>
-        <td id="r5_12">62.6%</td>
-      </tr>
-      <tr>
-        <td>7.5</td>
-        <td id="r6_1">90.7%</td>
-        <td id="r6_2">87.8%</td>
-        <td id="r6_3">85.0%</td>
-        <td id="r6_4">82.4%</td>
-        <td id="r6_5">79.9%</td>
-        <td id="r6_6">77.4%</td>
-        <td id="r6_7">75.1%</td>
-        <td id="r6_8">72.3%</td>
-        <td id="r6_9">69.4%</td>
-        <td id="r6_10">66.7%</td>
-        <td id="r6_11">64.0%</td>
-        <td id="r6_12">61.3%</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td id="r7_1">89.2%</td>
-        <td id="r7_2">86.3%</td>
-        <td id="r7_3">83.7%</td>
-        <td id="r7_4">81.1%</td>
-        <td id="r7_5">78.6%</td>
-        <td id="r7_6">76.2%</td>
-        <td id="r7_7">73.9%</td>
-        <td id="r7_8">70.7%</td>
-        <td id="r7_9">68.0%</td>
-        <td id="r7_10">65.3%</td>
-        <td id="r7_11">62.6%</td>
-        <td id="r7_12">59.9%</td>
-      </tr>
-      <tr>
-        <td>6.5</td>
-        <td id="r8_1">87.8%</td>
-        <td id="r8_2">85.0%</td>
-        <td id="r8_3">82.4%</td>
-        <td id="r8_4">79.9%</td>
-        <td id="r8_5">77.4%</td>
-        <td id="r8_6">75.1%</td>
-        <td id="r8_7">72.3%</td>
-        <td id="r8_8">69.4%</td>
-        <td id="r8_9">66.7%</td>
-        <td id="r8_10">64.0%</td>
-        <td id="r8_11">61.3%</td>
-        <td id="r8_12">58.6%</td>
-      </tr>
-    </table>
+    <div class="table-scroll">
+      <table>
+        <tr>
+          <td colspan="2">reps</td>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+          <td>5</td>
+          <td>6</td>
+          <td>7</td>
+          <td>8</td>
+          <td>9</td>
+          <td>10</td>
+          <td>11</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td rowspan="8">rpe</td>
+          <td>10</td>
+          <td id="r1_1">100%</td>
+          <td id="r1_2">95.5%</td>
+          <td id="r1_3">92.2%</td>
+          <td id="r1_4">89.2%</td>
+          <td id="r1_5">86.3%</td>
+          <td id="r1_6">83.7%</td>
+          <td id="r1_7">81.1%</td>
+          <td id="r1_8">78.6%</td>
+          <td id="r1_9">76.2%</td>
+          <td id="r1_10">73.9%</td>
+          <td id="r1_11">70.7%</td>
+          <td id="r1_12">68.0%</td>
+        </tr>
+        <tr>
+          <td>9.5</td>
+          <td id="r2_1">97.8%</td>
+          <td id="r2_2">93.9%</td>
+          <td id="r2_3">90.7%</td>
+          <td id="r2_4">87.8%</td>
+          <td id="r2_5">85.0%</td>
+          <td id="r2_6">82.4%</td>
+          <td id="r2_7">79.9%</td>
+          <td id="r2_8">77.4%</td>
+          <td id="r2_9">75.1%</td>
+          <td id="r2_10">72.3%</td>
+          <td id="r2_11">69.4%</td>
+          <td id="r2_12">66.7%</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td id="r3_1">95.5%</td>
+          <td id="r3_2">92.2%</td>
+          <td id="r3_3">89.2%</td>
+          <td id="r3_4">86.3%</td>
+          <td id="r3_5">83.7%</td>
+          <td id="r3_6">81.1%</td>
+          <td id="r3_7">78.6%</td>
+          <td id="r3_8">76.2%</td>
+          <td id="r3_9">73.9%</td>
+          <td id="r3_10">70.7%</td>
+          <td id="r3_11">68.0%</td>
+          <td id="r3_12">65.3%</td>
+        </tr>
+        <tr>
+          <td>8.5</td>
+          <td id="r4_1">93.9%</td>
+          <td id="r4_2">90.7%</td>
+          <td id="r4_3">87.8%</td>
+          <td id="r4_4">85.0%</td>
+          <td id="r4_5">82.4%</td>
+          <td id="r4_6">79.9%</td>
+          <td id="r4_7">77.4%</td>
+          <td id="r4_8">75.1%</td>
+          <td id="r4_9">72.3%</td>
+          <td id="r4_10">69.4%</td>
+          <td id="r4_11">66.7%</td>
+          <td id="r4_12">64.0%</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td id="r5_1">92.2%</td>
+          <td id="r5_2">89.2%</td>
+          <td id="r5_3">86.3%</td>
+          <td id="r5_4">83.7%</td>
+          <td id="r5_5">81.1%</td>
+          <td id="r5_6">78.6%</td>
+          <td id="r5_7">76.2%</td>
+          <td id="r5_8">73.9%</td>
+          <td id="r5_9">70.7%</td>
+          <td id="r5_10">68.0%</td>
+          <td id="r5_11">65.3%</td>
+          <td id="r5_12">62.6%</td>
+        </tr>
+        <tr>
+          <td>7.5</td>
+          <td id="r6_1">90.7%</td>
+          <td id="r6_2">87.8%</td>
+          <td id="r6_3">85.0%</td>
+          <td id="r6_4">82.4%</td>
+          <td id="r6_5">79.9%</td>
+          <td id="r6_6">77.4%</td>
+          <td id="r6_7">75.1%</td>
+          <td id="r6_8">72.3%</td>
+          <td id="r6_9">69.4%</td>
+          <td id="r6_10">66.7%</td>
+          <td id="r6_11">64.0%</td>
+          <td id="r6_12">61.3%</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td id="r7_1">89.2%</td>
+          <td id="r7_2">86.3%</td>
+          <td id="r7_3">83.7%</td>
+          <td id="r7_4">81.1%</td>
+          <td id="r7_5">78.6%</td>
+          <td id="r7_6">76.2%</td>
+          <td id="r7_7">73.9%</td>
+          <td id="r7_8">70.7%</td>
+          <td id="r7_9">68.0%</td>
+          <td id="r7_10">65.3%</td>
+          <td id="r7_11">62.6%</td>
+          <td id="r7_12">59.9%</td>
+        </tr>
+        <tr>
+          <td>6.5</td>
+          <td id="r8_1">87.8%</td>
+          <td id="r8_2">85.0%</td>
+          <td id="r8_3">82.4%</td>
+          <td id="r8_4">79.9%</td>
+          <td id="r8_5">77.4%</td>
+          <td id="r8_6">75.1%</td>
+          <td id="r8_7">72.3%</td>
+          <td id="r8_8">69.4%</td>
+          <td id="r8_9">66.7%</td>
+          <td id="r8_10">64.0%</td>
+          <td id="r8_11">61.3%</td>
+          <td id="r8_12">58.6%</td>
+        </tr>
+      </table>
+    </div>
 
     <script type="text/javascript" src="rpe.js"></script>
   </body>
