--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="table-scroll">
       <table>
         <tr>
-          <td colspan="2">reps</td>
+          <td colspan="2">REPS</td>
           <td>1</td>
           <td>2</td>
           <td>3</td>
@@ -33,7 +33,7 @@
           <td>12</td>
         </tr>
         <tr>
-          <td rowspan="8">rpe</td>
+          <td rowspan="8">R<br>P<br>E</td>
           <td>10</td>
           <td id="1_1">100%</td>
           <td id="1_2">95.5%</td>
@@ -160,7 +160,7 @@
     <div class="table-scroll">
       <table>
         <tr>
-          <td colspan="2">reps</td>
+          <td colspan="2">REPS</td>
           <td>1</td>
           <td>2</td>
           <td>3</td>
@@ -175,7 +175,7 @@
           <td>12</td>
         </tr>
         <tr>
-          <td rowspan="8">rpe</td>
+          <td rowspan="8">R<br>P<br>E</td>
           <td>10</td>
           <td id="r1_1">100%</td>
           <td id="r1_2">95.5%</td>
