--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
-      <h1 class="header-logo">C</h1>
+      <a href="/calorie"><h1 class="header-logo">C</h1></a>
     </header>
 
     <div class="content">
       <div class="inputarea">
         <p class="content-title">重量を入力してください</p>
         <form id="form">
-          <div class="weight-input">
+          <div class="input">
             <input type="number" step="0.1" id="input"><span> kg</span>
           </div>
         </form>
