modify link and css

--- a/calorie.html
+++ b/calorie.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/"><h1 class="header-logo">C</h1></a>
+      <a href="/index.html"><h1 class="header-logo">C</h1></a>
     </header>
 
     <div class="content">
@@ -70,6 +70,8 @@
       <div class="input">
         <button type="button" id="btn">計算</button>
       </div>
+      <br>
+      <hr>
       <br>
 
       <div class="output-form">
