--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/calorie"><h1 class="header-logo">C</h1></a>
+      <a href="/calorie.html"><h1 class="header-logo">C</h1></a>
     </header>
 
     <div class="content">
