--- a/calorie.html
+++ b/calorie.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"><h1 class="header-logo">C</h1></a>
+      <a href="/rpecalculator/"><h1 class="header-logo">C</h1></a>
     </header>
 
     <div class="content">
