--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>RPE CALCULATOR</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="apple-touch-icon" href="https://ga297.github.io/rpecalculator/apple-touch-icon.png">
   </head>
   <body>
     <header>
