--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="/rpecalculator/calorie.html"><h1 class="header-logo">RPE</h1></a>
+      <a href="/caloriecalculator"><h1 class="header-logo">RPE</h1></a>
     </header>
 
     <div class="content">
